# AssistantPlus

./: CMakeLists.txt  README.md  TODO.txt
Modules/: config.h  suVirtualDevice.cpp  suVirtualDevice.h
Modules/Null/: CMakeLists-Main.txt  Null.cpp  Null.h  null.def  simpleDll.cpp  simpleDll.h
cmake/: CMakeInclude.cmake  LinkBoost.cmake  UseBoost.cmake
common/: cvLogging.cpp  cvLogging.hpp
doc/: CAM框架.vsdx  GraphNode.vsdx
include/: engines.cpp  engines.h
include/Engines/Core/: Asserts.h  ClassList.h  ExternalFiles.h  Stdhdr.cpp  Stdhdr.h  String.cpp  String.h  UnicodeString.cpp  UnicodeString.h  Vector.cpp  Vector.h  VectorSTLImpl.cpp  VectorSTLImpl.h
include/Engines/System/Win32/: fastTiming.cpp  fastTiming.h  lock.h  thread.h
include/Engines/System/unix/: commonTools.cpp  commonTools.h  fastTiming.cpp  fastTiming.h  lock.cpp  lock.h  thread.h  win2linux_types.h
include/Engines/Utility/: Console.cpp  Console.h  commonTools.cpp  commonTools.h  dlfcn.cpp  exception.h  lock.h  resourceMgr.cpp  resourceMgr.h  suCMDParser.h  thread.h  timing.h  tstring.h  wideTools.cpp  wideTools.h  xmlTools.cpp  xmlTools.h
src/: Option.cpp  Option.h  OptionTypes.h  ServerMain.cpp  ServerSet.cpp  ServerSet.h  config.h  redispp.cpp  redispp.h  server_http.hpp  suAgentController.cpp  suAgentController.h  suHttpParser.cpp  suHttpParser.h  suMemory.cpp  suServerStatus.cpp  suServerStatus.h  suServiceInterface.h  suSocketServer.cpp  suSocketServer.hpp
src/sysTray/: Script.aps  Script.rc  StdAfx.h  resource.h  suAgentTray.cpp
unit_test/: CMakeLists.txt  main.cpp  test.cpp
